--- a/app (trunk)/uCaller/uCaller-Info.plist
+++ b/app (trunk)/uCaller/uCaller-Info.plist
@@ -13,7 +13,7 @@
 	<key>CFBundleIcons~ipad</key>
 	<dict/>
 	<key>CFBundleIdentifier</key>
-	<string>com.huying.ucaller</string>
+	<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>5.0</string>
 	<key>CFBundleName</key>
